--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -28,6 +28,7 @@ h3 {
 
 .pattern-content-home{
   margin: 0px 30px;
+  margin-bottom: 60px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
