--- a/src/assets/styles/pattern_new.scss
+++ b/src/assets/styles/pattern_new.scss
@@ -20,6 +20,10 @@
 
 .material-list-new-para{
   width: 300px;
+  text-decoration: none;
+  font-family: Arial;
+  font-style: italic;
+  color: darkslategray;
 }
 
 .checkbox-material{
