--- a/src/views/categories/index.html.ejs
+++ b/src/views/categories/index.html.ejs
@@ -15,7 +15,7 @@
       <% categoriesList.forEach((category) => { %>
         <div class="category-container">
           <div class="category-text">
-            <a><%- category.name %></a>
+            <a class="pattern-font"><%- category.name %></a>
           </div>
           <div>
             <form action="<%- editCategoryPath(category) %>">
