--- a/src/views/materials/index.html.ejs
+++ b/src/views/materials/index.html.ejs
@@ -15,7 +15,7 @@
       <% materialsList.forEach((material) => { %>
         <div class="material-container">
           <div class="material-text">
-            <a><%- material.name %></a>
+            <a class="pattern-font"><%- material.name %></a>
           </div>
           <div>
             <form action="<%- editMaterialPath(material) %>">
