:art: CSS last changes.

--- a/src/views/index.html.ejs
+++ b/src/views/index.html.ejs
@@ -39,6 +39,20 @@
         <a class="pattern-font-tittle" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
         <a class="pattern-font">Puntaje: <%- pattern.score %>/5</a>
         <a class="pattern-font">Popularidad: <%- pattern.popularity %></a>
+        <% if (currentUser) { %>
+          <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
+            <div class="edit-and-delete-pattern">
+              <form action="<%- editPatternPath(pattern) %>">
+                <button class="edit-pattern" type="submit"> <i class="fas fa-pen"></i> </button>
+              </form>
+              <form action="<%- deletePatternPath(pattern) %>" onclick="return confirm('Estás seguro?');"
+                method="POST">
+                <input type="hidden" name="_method" value="delete" />
+                <button class="delete-pattern" type="submit"> <i class="fas fa-trash-alt "></i></button>
+              </form>
+            </div>
+          <% } %>
+        <% } %>
       </div>
     <% })}; %>
   </div>
