Searchbar React [Not showing]

--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -17,7 +17,7 @@
         <h2>Buscar Patrones</h2>
       </div>
       <div class="search-content">
-        <%- include('search') %>
+        <div id="search-bar"> </div>
       </div>
     </div>
     <div class="patterns-list">
