--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -11,44 +11,5 @@
       </div>
     <% } %>
   </div>
-  <div class="pattern-body">
-    <div class="pattern-search">
-      <div class="search-content">
-        <h2>Buscar Patrones</h2>
-      </div>
-      <div class="search-content">
-        <div id="search-bar"> </div>
-      </div>
-    </div>
-    <div class="patterns-list">
-      <h2>Patrones Encontrados</h2>
-      <div class="pattern-content">
-        <% if (!patternsList.length) { %>
-          <h3>No hay patrones!</h3>
-        <% } else { %>
-        <% patternsList.forEach((pattern) => { %>
-          <div class="pattern-search-container">
-            <img class="photo" src="<%- pattern.image %>">
-            <a class="pattern-font-tittle" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
-            <a class="pattern-font">Puntaje: <%- pattern.score %>/5</a>
-            <a class="pattern-font">Popularidad: <%- pattern.popularity %></a>
-            <% if (currentUser) { %>
-              <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
-                <div class="edit-and-delete-pattern">
-                  <form action="<%- editPatternPath(pattern) %>">
-                    <button class="edit-pattern" type="submit"> <i class="fas fa-pen"></i> </button>
-                  </form>
-                  <form action="<%- deletePatternPath(pattern) %>" onclick="return confirm('Estás seguro?');"
-                    method="POST">
-                    <input type="hidden" name="_method" value="delete" />
-                    <button class="delete-pattern" type="submit"> <i class="fas fa-trash-alt "></i></button>
-                  </form>
-                </div>
-              <% } %>
-            <% } %>
-          </div>
-        <% })}; %>
-      </div>
-    </div>
-  </div>
+  <div id="search-box"></div>
 </div>
