:ok_hand: :art: React search done!

--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -11,5 +11,5 @@
       </div>
     <% } %>
   </div>
-  <div id="search-box"></div>
+  <div id="search-box" data-default-name="<%- defaultName %>"></div>
 </div>
