--- a/src/views/index.html.ejs
+++ b/src/views/index.html.ejs
@@ -1,26 +1,12 @@
 <div class="home-body">
-  <div class="tittle-index">
-    <h1>Lista de Patrones!</h1>
-  </div>
-  <form action="/">
+  <br><br>
+  <form action="/patterns">
     <div class="search-container">
       <div class="search-element">
         <div class="search-element-content">
           <div class="search-subelement">
-            <p class="pattern-font" id="label-select">Busca por nombre: </p>
-            <input class="input-search"  type="text" name="name" />
-          </div>
-          <div class="search-subelement">
-            <label class="pattern-font" for="sorting">Ordenar por:</label>
-            <select class="select-search" name="sorting">
-              <% options.forEach(option => { %>
-                <% if (selSorting === option[0]) { %>
-                  <option value="<%- option[0] %>" selected><%- option[1] %></option>
-                <% } else { %>
-                  <option value="<%- option[0] %>"><%- option[1] %></option>
-                <% } %>
-              <% }); %>
-            </select>
+            <p class="pattern-font" id="label-select">Busca por Nombre: </p>
+            <input class="input-search" type="text" name="name" placeholder="Busca Tus Patrones!"/>
           </div>
         </div>
       </div>
@@ -29,6 +15,18 @@
       </div>
     </div>
   </form>
+  <div class="tittle-index">
+    <h1>Patrones Más Recientes</h1>
+  </div>
+  <div class="tittle-index">
+    <h1>Patrones Más Populares</h1>
+  </div>
+  <div class="tittle-index">
+    <h1>Patrones Mejor Valorados</h1>
+  </div>
+  <div class="tittle-index">
+    <h1>Tus Patrones Favoritos</h1>
+  </div>
   <div class="pattern-content-home">
     <% if (!patterns.length) { %>
       <h3>No hay patrones!</h3>
