:sparkles: :newspaper: Index Dashboard

--- a/src/views/index.html.ejs
+++ b/src/views/index.html.ejs
@@ -15,23 +15,14 @@
       </div>
     </div>
   </form>
-  <div class="tittle-index">
-    <h1>Patrones Más Recientes</h1>
-  </div>
-  <div class="tittle-index">
-    <h1>Patrones Más Populares</h1>
-  </div>
-  <div class="tittle-index">
-    <h1>Patrones Mejor Valorados</h1>
-  </div>
-  <div class="tittle-index">
-    <h1>Tus Patrones Favoritos</h1>
-  </div>
-  <div class="pattern-content-home">
-    <% if (!patterns.length) { %>
-      <h3>No hay patrones!</h3>
-    <% } else { %>
-    <% patterns.forEach((pattern) => { %>
+  <% if(currentUser) { %>
+
+    <% if (favorites.length) { %>
+    <div class="tittle-index">
+   			<h1>Tus Patrones Favoritos</h1>
+  		</div>
+  		<div class="pattern-content-home">
+    <% favorites.forEach((pattern) => { %>
       <div class="pattern-search-container">
         <img class="photo" src="<%- pattern.image %>">
         <a class="pattern-font-tittle" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
@@ -54,4 +45,97 @@
       </div>
     <% })}; %>
   </div>
+  <% } %>
+  <div class="tittle-index">
+    <h1>Patrones Más Recientes</h1>
+  </div>
+  <div class="pattern-content-home">
+    <% if (!patternsNewer.length) { %>
+      <h3>No hay patrones!</h3>
+    <% } else { %>
+    <% patternsNewer.forEach((pattern) => { %>
+      <div class="pattern-search-container">
+        <img class="photo" src="<%- pattern.image %>">
+        <a class="pattern-font-tittle" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
+        <a class="pattern-font">Puntaje: <%- pattern.score %>/5</a>
+        <a class="pattern-font">Popularidad: <%- pattern.popularity %></a>
+        <% if (currentUser) { %>
+          <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
+            <div class="edit-and-delete-pattern">
+              <form action="<%- editPatternPath(pattern) %>">
+                <button class="edit-pattern" type="submit"> <i class="fas fa-pen"></i> </button>
+              </form>
+              <form action="<%- deletePatternPath(pattern) %>" onclick="return confirm('Estás seguro?');"
+                method="POST">
+                <input type="hidden" name="_method" value="delete" />
+                <button class="delete-pattern" type="submit"> <i class="fas fa-trash-alt "></i></button>
+              </form>
+            </div>
+          <% } %>
+        <% } %>
+      </div>
+    <% })}; %>
+  </div>
+  <div class="tittle-index">
+    <h1>Patrones Más Populares</h1>
+  </div>
+  <div class="pattern-content-home">
+    <% if (!patternsPopular.length) { %>
+      <h3>No hay patrones!</h3>
+    <% } else { %>
+    <% patternsPopular.forEach((pattern) => { %>
+      <div class="pattern-search-container">
+        <img class="photo" src="<%- pattern.image %>">
+        <a class="pattern-font-tittle" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
+        <a class="pattern-font">Puntaje: <%- pattern.score %>/5</a>
+        <a class="pattern-font">Popularidad: <%- pattern.popularity %></a>
+        <% if (currentUser) { %>
+          <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
+            <div class="edit-and-delete-pattern">
+              <form action="<%- editPatternPath(pattern) %>">
+                <button class="edit-pattern" type="submit"> <i class="fas fa-pen"></i> </button>
+              </form>
+              <form action="<%- deletePatternPath(pattern) %>" onclick="return confirm('Estás seguro?');"
+                method="POST">
+                <input type="hidden" name="_method" value="delete" />
+                <button class="delete-pattern" type="submit"> <i class="fas fa-trash-alt "></i></button>
+              </form>
+            </div>
+          <% } %>
+        <% } %>
+      </div>
+    <% })}; %>
+  </div>
+  <div class="tittle-index">
+    <h1>Patrones Mejor Valorados</h1>
+  </div>
+  <div class="pattern-content-home">
+    <% if (!patternsValues.length) { %>
+      <h3>No hay patrones!</h3>
+    <% } else { %>
+    <% patternsValues.forEach((pattern) => { %>
+      <div class="pattern-search-container">
+        <img class="photo" src="<%- pattern.image %>">
+        <a class="pattern-font-tittle" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
+        <a class="pattern-font">Puntaje: <%- pattern.score %>/5</a>
+        <a class="pattern-font">Popularidad: <%- pattern.popularity %></a>
+        <% if (currentUser) { %>
+          <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
+            <div class="edit-and-delete-pattern">
+              <form action="<%- editPatternPath(pattern) %>">
+                <button class="edit-pattern" type="submit"> <i class="fas fa-pen"></i> </button>
+              </form>
+              <form action="<%- deletePatternPath(pattern) %>" onclick="return confirm('Estás seguro?');"
+                method="POST">
+                <input type="hidden" name="_method" value="delete" />
+                <button class="delete-pattern" type="submit"> <i class="fas fa-trash-alt "></i></button>
+              </form>
+            </div>
+          <% } %>
+        <% } %>
+      </div>
+    <% })}; %>
+  </div>
+  
+  
 </div>
